# satisfactory-builder

./: Cargo.toml  README.md  cargo.toml  justfile
builder/src/: lib.rs
extractor/: Cargo.toml
extractor/src/: lib.rs
machine/src/: lib.rs
resource/src/: lib.rs
satisfactory/: Cargo.toml
satisfactory-builder/: Cargo.toml
satisfactory-builder/src/: main.rs
satisfactory-builder/src/machines/: manufacturers.rs  mod.rs
satisfactory-builder/src/pipelines/: mod.rs
satisfactory-builder/src/resources/: mod.rs
satisfactory-builder/src/traits/: mod.rs
src/: main.rs
src/machines/: manufacturers.rs
src/pipelines/: mod.rs
src/recipes/: functions.rs  mod.rs  tree.rs
src/resources/: mod.rs
src/traits/: mod.rs
