[package]
name = "satisfactory-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
inquire = "0.7.5"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.10.0", features = ["fast-rng", "macro-diagnostics", "serde", "v4"] }
